k8s/todouideploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todoui
  template:
    metadata:
      labels:
        app: todoui
    spec:
      containers:
      - name: nginx-prometheus-exporter-side-car
        image: nginx/nginx-prometheus-exporter:latest
        imagePullPolicy: IfNotPresent
        args: ["-nginx.scrape-uri=http://localhost/stub_status"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 9113
      - name: todoui
        image: todoui
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 80
          failureThreshold: 1
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health/live
            port: 80
          failureThreshold: 1
          periodSeconds: 10

        startupProbe:
          httpGet:
            path: /health/live
            port: 80
          failureThreshold: 30
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: todoui
  annotations: 
    konghq.com/plugins: todo-basic-auth
spec:
  selector:
    app: todoui
  ports:
  - port: 80
    targetPort: 80
