k8s/todoingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    konghq.com/plugins: add-request-header,add-response-header
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: todobroadcastapi
                port:
                  number: 80
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todoapi
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todoui
                port:
                  number: 80
